templates/nasa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nasa-flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nasa-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nasa-flask-app
                port:
                  number: 5000
